--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     --mediumGray: #626262;
     --lightGray: #999999;
     --veryLightGray: #eeeeee;
-    --whiteColor: #ffffff;
+    --whiteColor: #ece4e4;
 }
 
 html {
